2004-02-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* solubility.c (shuffle): Removed unused variables.
	(walk_tree): Make the random shuffle actually uniform. I really
	shouldn't have tried to write that from memory.

2004-02-18  Callum McKenzie  <callum@physics.otago.ac.nz>

	* solubility.c: Just fixing spelling and grammar in comments.

2004-02-14  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c: Remove references to _has_separator when dealing
	with message dialogs

2004-02-11  Richard Hoelscher  <rah@rahga.com>

	* mahjongg.c (bg_colour_callback): Set saving background color
	as a 12-digit hex triplet. Bug #134179.

2004-02-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c (about_callback): translator_credits ->
	translator-credits.

2004-02-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* postmodern.svg: New, slimmer, version from Richard Hoelscher.

2004-01-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c (shuffle_tiles_callback): Apllied patch from Richard
	Hoelscher to clear the selection before shuffling. Bug #131199.

2004-01-26  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.schemas.in:
	* mahjongg.c: Added new layouts from Rexford Newbould and
	Krzysztof Foltman. Mark the layout names for translation and made
	them more "readable" (i.e. easy->Easy).

2004-01-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* drawing.c (recreate_tile_images): Set the gc for gdk_draw_pixbuf
	to NULL. It was being used, inappropriately for clipping with bad
	results. Fixes bug #131905.

	* drawing.c: Keep the aspect ratio of the tiles constant. Patch
	from Jim Evins (see bug #131957).

2004-01-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (pixmap_DATA): Added new tile sets, smooth.png and
	postmodern.svg.

2004-01-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* drawing.c (board_click): Ignore double click and triple click