@@ -42,7 +42,7 @@ Gtali:
 Iagno:
 
 Mahjongg:
-	- Check solvability algorithm, it seems a bit easier now (130962).
+	Check tile-sets for rendering issues.
 
 Same-gnome:
 
